--- a/_posts/2023-02-07-kabul-spy.markdown
+++ b/_posts/2023-02-07-kabul-spy.markdown
@@ -37,7 +37,7 @@ I had a couple of issues with the original disk files I found to play this game 
 
 Overall it wasn't bad for what it is - a very early adventure game on the Apple II.
 
-**Game Information**
+### Game Information
 
 |*Game*|Kabul Spy|
 |*Developer*|[Sirius Software](https://en.wikipedia.org/wiki/Sirius_Software)|
@@ -45,7 +45,7 @@ Overall it wasn't bad for what it is - a very early adventure game on the Apple 
 |*Release Date*|1982|
 |*Systems*|Apple II|
 
-**Play Information**
+### My Playthrough
 
 |How Long to Beat?|1 hour|
 |*Version Played*|Apple II via [AppleWin](https://github.com/AppleWin/AppleWin)|
