--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -56,7 +56,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 47  -%}
+{%- assign games_finished = 48  -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -242,7 +242,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 166. Gateway II: Homeworld (Legend Entertainment) - 1993
 167. Jack in the Dark (Infogrames) - 1993
 168. Quest for Glory: Shadows of Darkness (Sierra On-Line) - 1993
-169. Gabriel Knight: Sins of the Fathers (Sierra On-Line) - 1993
+169. [Gabriel Knight: Sins of the Fathers (Sierra On-Line)]({% post_url 2023-06-14-gabriel-knight-sins-of-the-fathers %}) - 1993
 170. Jurassic Park (Sega of America) - 1993
 171. Alice: An Interactive Museum (Toshiba-EMI) - 1994
 172. Are You Afraid of the Dark: The Tale of Orpheo's Curse (Viacom New Media) - 1994
