--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -56,7 +56,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 51  -%}
+{%- assign games_finished = 52  -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -130,7 +130,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 54. Legend of Djel (Coktel Vision) - 1989
 55. Future Wars (Delphine Software International) - 1989
 56. KULT: The Temple of Flying Saucers (Exxos, ERE informatique) - 1989
-57. Manhunter 2: San Francisco (Evryware) - 1989
+57. [Manhunter 2: San Francisco (Evryware)]({% post_url 2023-09-06-manhunter-san-francisco %}) - 1989
 58. [Mean Streets (Access Software)]({% post_url 2023-01-19-mean-streets %}) - 1989
 59. Transylvania III: Vanquish the Night (Polarware) - 1989
 60. Space Quest III: The Pirates of Pestulon (Sierra On-Line) - 1989
