--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -56,7 +56,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 54  -%}
+{%- assign games_finished = 55  -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -86,7 +86,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 10. The Dark Crystal (On-Line Systems) - 1983
 11. ~~Star Arthur Legend: Planet Mephius (T&E Soft) - 1983~~ (_Japanese only_)
 12. ~~Portopia Renzoku Satsujin Jiken (Yuji Horii, Chunsoft) - 1983~~ (_Japanese only_)
-13. Rendezvous with Rama (Telarium) - 1984
+13. [Rendezvous with Rama (Telarium)]({% post_url 2023-10-07-rendezvous-with-rama %}) - 1984
 14. Below the Root (Dale Disharoon) - 1984
 15. Dallas Quest (Datasoft) - 1984
 16. ~~Okhotsk ni Kiyu: Hokkaido Rensa Satsujin Jiken (Yuji Horii, Login Software) - 1984~~ (_Japanese only_)
