--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -56,7 +56,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 56  -%}
+{%- assign games_finished = 57  -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -219,7 +219,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 143. Inca II: Nations of Immortality (Coktel Vision) - 1993
 144. Innocent Until Caught (Divide By Zero) - 1993
 145. The Legend of Kyrandia: Hand of Fate (Westwood Studios) - 1993
-146. Lost in Time (Coktel Vision) - 1993
+146. [Lost in Time (Coktel Vision)]({% post_url 2023-10-26-lost-in-time %}) - 1993
 147. Pepper's Adventures in Time (Sierra On-Line) - 1993
 148. Putt-Putt Goes to the Moon (Humongous Entertainment) - 1993
 149. Return of the Phantom (MicroProse) - 1993
