--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -56,7 +56,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 60  -%}
+{%- assign games_finished = 61  -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -199,7 +199,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 123. Spellcasting 301: Spring Break (Legend Entertainment) - 1992
 124. Star Trek: 25th Anniversary (Interplay) - 1992
 125. [Nightshade (Beam Software)]({% post_url 2022-12-31-nightshade %}) - 1992
-126. Frederik Pohl's Gateway (Legend Entertainment) - 1992
+126. [Frederik Pohl's Gateway (Legend Entertainment)]({% post_url 2023-11-29-gateway %}) - 1992
 127. Indiana Jones and the Fate of Atlantis (LucasArts) - 1992
 128. Lure of the Temptress (Revolution Software) - 1992
 129. Quest for Glory III: Wages of War (Sierra On-Line) - 1992
