--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -56,7 +56,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 62  -%}
+{%- assign games_finished = 63  -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -165,7 +165,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 89. Hugo II, Whodunit? (Gray Design Associates) - 1991
 90. Les Manley in: Lost in L.A. (Accolade) - 1991
 91. Martian Memorandum (Access Software) - 1991
-92. Police Quest III: The Kindred (Sierra On-Line) - 1991
+92. [Police Quest III: The Kindred (Sierra On-Line)]({% post_url 2023-12-16-police-quest-iii %}) - 1991
 93. Sherlock Holmes: Consulting Detective (ICOM Simulations) - 1991
 94. Spellcasting 201: The Sorcerer's Appliance (Legend Entertainment) - 1991
 95. Timequest (Legend Entertainment) - 1991
