--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -56,7 +56,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 64  -%}
+{%- assign games_finished = 65  -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -231,7 +231,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 155. Shadow of the Comet (Infogrames) - 1993
 156. The 7th Guest (Trilobyte) - 1993
 157. Leisure Suit Larry 6: Shape Up or Slip Out! (Sierra On-Line) - 1993
-158. Maniac Mansion: Day of the Tentacle (LucasArts) - 1993
+158. [Maniac Mansion: Day of the Tentacle (LucasArts)]({% post_url 2024-01-20-day-of-the-tentacle %}) - 1993
 159. Return to Zork (Infocom) - 1993
 160. Myst (Cyan) - 1993
 161. Simon the Sorcerer (Adventure Soft) - 1993
