--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -56,7 +56,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 65  -%}
+{%- assign games_finished = 66  -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -217,7 +217,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 141. Freddy Pharkas: Frontier Pharmacist (Sierra On-Line) - 1993
 142. Gobliins Quest 3 (Coktel Vision) - 1993
 143. Inca II: Nations of Immortality (Coktel Vision) - 1993
-144. Innocent Until Caught (Divide By Zero) - 1993
+144. [Innocent Until Caught (Divide By Zero)]({% post_url 2024-01-29-innocent-until-caught %}) - 1993
 145. The Legend of Kyrandia: Hand of Fate (Westwood Studios) - 1993
 146. [Lost in Time (Coktel Vision)]({% post_url 2023-10-26-lost-in-time %}) - 1993
 147. Pepper's Adventures in Time (Sierra On-Line) - 1993
