--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -56,7 +56,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 68  -%}
+{%- assign games_finished = 69  -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -133,7 +133,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 57. [Manhunter 2: San Francisco (Evryware)]({% post_url 2023-09-06-manhunter-san-francisco %}) - 1989
 58. [Mean Streets (Access Software)]({% post_url 2023-01-19-mean-streets %}) - 1989
 59. Transylvania III: Vanquish the Night (Polarware) - 1989
-60. Space Quest III: The Pirates of Pestulon (Sierra On-Line) - 1989
+60. [Space Quest III: The Pirates of Pestulon (Sierra On-Line)]({% post_url 2024-02-16-space-quest-iii %}) - 1989
 61. Indiana Jones and the Last Crusade (Lucasfilm Games) - 1989
 62. Quest for Glory: So You Want to Be a Hero (Sierra On-Line) - 1989
 63. The Colonel's Bequest (Sierra On-Line) - 1989
