--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -16,7 +16,7 @@ Though I was never very active in the project, I tried to contribute in various 
 
 When I stumbled across the [CRPG Addict's blog](https://crpgaddict.blogspot.com/) many years ago I wanted to do something similar, but for adventure games. I've decided to take a run at this as (a very long time ago) I used to write for an online magazine ([Game Over](http://www.game-over.com/content/)) under the pseudonym "Lothian". A [quick Google search](https://www.google.com/search?q=lothian+site:www.game-over.net) will unearth some examples if you're curious ...
 
-It's worth calling out the reviewers at [The Adventure Gamer](https://advgamer.blogspot.com/), who have been blogging about these games in a similar fashion as the CRPG Addict for nearly as long. Both sites go far more in depth than I plan to and focus on documenting their playthroughs. My goal here is to summarize the experience, though the format may change over time depending on how well received this is (and if I can stay focused or not :P).
+It's worth calling out the reviewers at [The Adventure Gamer](https://advgamer.blogspot.com/), who have been blogging about these games in a similar fashion as the CRPG Addict for nearly as long. Both sites go far more in depth than I plan to and focus on documenting their playthroughs. My goal here is to summarize the experience, though the format may change over time depending on how well received this is (and if I can stay focused or not 😅).
 
 ## Up Next
 
