--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -60,7 +60,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 74  -%}
+{%- assign games_finished = 75  -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -240,7 +240,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 160. Myst (Cyan) - 1993
 161. Simon the Sorcerer (Adventure Soft) - 1993
 162. [Companions of Xanth (Legend Entertainment)]({% post_url 2023-05-23-companions-of-xanth %}) - 1993
-163. Police Quest: Open Season (Sierra On-Line) - 1993
+163. [Police Quest: Open Season (Sierra On-Line)]({% post_url 2024-04-25-police-quest-open-season %}) - 1993
 164. [Sam & Max Hit the Road (LucasArts)]({% post_url 2023-01-23-sam-and-max-hit-the-road %}) - 1993
 165. Star Trek: Judgment Rites (Interplay) - 1993
 166. Gateway II: Homeworld (Legend Entertainment) - 1993
