--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -60,7 +60,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 75  -%}
+{%- assign games_finished = 76  -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -156,7 +156,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 76. Conquests of Camelot: The Search for the Grail (Sierra On-Line) - 1990
 77. [Loom (Lucasfilm Games)]({% post_url 2024-02-06-loom %}) - 1990
 78. Spellcasting 101: Sorcerers Get All The Girls (Legend Entertainment) - 1990
-79. The Secret of Monkey Island (Lucasfilm Games) - 1990
+79. [The Secret of Monkey Island (Lucasfilm Games)]({% post_url 2024-04-30-the-secret-of-monkey-island %}) - 1990
 80. King's Quest V: Absence Makes the Heart Go Yonder! (Sierra On-Line) - 1990
 81. [The Adventures of Willy Beamish (Dynamix)]({% post_url 2024-02-12-the-adventures-of-willy-beamish %}) - 1991
 82. Conquests of the Longbow: The Legend of Robin Hood (Sierra On-Line) - 1991
