--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -60,7 +60,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 77  -%}
+{%- assign games_finished = 78  -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -344,7 +344,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 264. [Ripper (Take-Two Interactive)]({% post_url 2023-09-27-ripper %}) - 1996
 265. Spycraft: The Great Game (Activision) - 1996
 266. Zork Nemesis (Zombie LLC) - 1996
-267. Normality (Gremlin Interactive) - 1996
+267. [Normality (Gremlin Interactive)]({% post_url 2024-05-27-normality %}) - 1996
 268. Kingdom O' Magic (SCi) - 1996
 269. The Pandora Directive (Access Software) - 1996
 270. Azrael's Tear (Intelligent Games) - 1996
