--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -58,7 +58,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 82 -%}
+{%- assign games_finished = 83 -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -245,7 +245,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 167. Jack in the Dark (Infogrames) - 1993
 168. Quest for Glory: Shadows of Darkness (Sierra On-Line) - 1993
 169. [Gabriel Knight: Sins of the Fathers (Sierra On-Line)]({% post_url 2023-06-14-gabriel-knight-sins-of-the-fathers %}) - 1993
-170. Jurassic Park (Sega of America) - 1993
+170. [Jurassic Park (Sega of America)]({% post_url 2024-07-15-jurassic-park %}) - 1993
 171. Alice: An Interactive Museum (Toshiba-EMI) - 1994
 172. Are You Afraid of the Dark: The Tale of Orpheo's Curse (Viacom New Media) - 1994
 173. The Bizarre Adventures of Woodruff and the Schnibble (Coktel Vision) - 1994
