--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -58,7 +58,7 @@ The games list for this journey is available via [this Google Sheet](https://doc
 As I work through the list I'll link the reviews below. You can also find the reviews (in order of publication) under the ["Let's Adventure!"](https://www.alexbevi.com/categories/let-s-adventure/) category page or [sorted by score]({% post_url 2021-08-08-adventure-games-1980-1999-sorted-by-score %}).
 
 <hr>
-{%- assign games_finished = 83 -%}
+{%- assign games_finished = 84 -%}
 {%- assign games_skipped  = 13  -%}
 {%- assign games_total    = 363 -%}
 ```js
@@ -177,7 +177,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 99. Monkey Island 2: LeChuck's Revenge (LucasArts) - 1991
 100. Amazon: Guardians of Eden (Access Software) - 1992
 101. B.A.T. II – The Koshan Conspiracy (Computer's Dream) - 1992
-102. Bargon Attack (Coktel Vision) - 1992
+102. [Bargon Attack (Coktel Vision)]({% post_url 2024-08-06-bargon-attack %}) - 1992
 103. The Dagger of Amon Ra (Sierra On-Line) - 1992
 104. [Dark Seed (Cyberdreams)]({% post_url 2023-11-20-darkseed %}) - 1992
 105. Daughter of Serpents (The Scroll) (Eldritch Games) - 1992
